# code-jam-10-qualifier

./: .flake8
qualifier/: pyproject.toml  qualifier.py
